<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ManualControlFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/manCtrlLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dirLeft" />

        <Button
            android:id="@+id/manCtrlUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dirUp" />

        <Button
            android:id="@+id/manCtrlDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dirDown" />

        <Button
            android:id="@+id/manCtrlRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dirRight" />

    </LinearLayout>

</ScrollView>