<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/mainButtonManualControl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainManualControl"
            android:onClick="test"/>

        <Button
            android:id="@+id/mainButtonTwoPointTL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainTwoPointTL" />

        <Button
            android:id="@+id/mainButtonSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mainButtonTwoPointTL"
            android:text="@string/mainSettings" />

        <Button
            android:id="@+id/mainButtonBluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mainButtonSettings"
            android:text="@string/mainBluetooth" />

    </LinearLayout>

</ScrollView>
